# SpacetimeDB

./: .dockerignore  .env.docker  .gitignore  Cargo.toml  DOCKER_README.md  Dockerfile.prod  TELEMETRY_README.md  docker-compose.production.yml  docker-compose.telemetry.yml
.github/workflows/: ci.yml
crates/bindings-go/internal/autogen/: algebraic_type.go  index_type.go  lifecycle.go  misc_module_export.go  product_type.go  product_type_element.go  raw_column_def_v_8.go  raw_constraint_data_v_9.go  raw_constraint_def_v_8.go  raw_constraint_def_v_9.go  (+24 more)
crates/bindings-go/tests/: chat_integration_test.go  connection_lifecycle_test.go  perf_demo_test.go  perf_test_integration_test.go  reducer_discovery_test.go  sdk_advanced_features_test.go  sdk_array_vector_operations_test.go  sdk_collections_fixed_test.go  sdk_collections_structures_test.go  sdk_complex_collections_test.go  sdk_custom_structs_test.go  sdk_enum_union_types_test.go  sdk_error_handling_bulk_operations_test.go  sdk_floating_point_test.go  sdk_identity_connection_test.go  sdk_indexing_performance_test.go  sdk_optional_types_test.go  sdk_platform_specific_test.go  sdk_primary_keys_test.go  sdk_primitive_integers_test.go  sdk_string_operations_test.go  sdk_timestamp_time_test.go  sdk_unique_constraints_test.go
crates/cli/src/: util.rs
crates/client-api/: Cargo.toml
crates/client-api/src/: lib.rs  telemetry.rs
crates/codegen/src/: go.rs  lib.rs  python.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  startup.rs  vm.rs
crates/python-bridge/: Cargo.toml  README.md
crates/python-bridge/examples/: simple_game.py
crates/python-bridge/src/: bsatn_bridge.rs  error.rs  lib.rs  pyodide_runtime.rs  type_conversion.rs
crates/python-bridge/src/tests/: conversion_tests.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/standalone/: config.toml
crates/table/: Cargo.toml
crates/table/src/: lib.rs  table.rs  telemetry.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  lib.rs  metrics.rs  metrics_bridge.rs  metrics_simple.rs  performance_monitor.rs  propagation.rs  resource_monitor.rs  sla_metrics.rs  tracing_layer.rs
crates/telemetry/tests/: integration_test.rs
modules/bsatn-test/go-bindings/: bsatn_test_result.go  clear_results_reducer.go  echo_u8_reducer.go  echo_vec2_reducer.go  go.mod  go.sum  implementation_test.go  module.go
telemetry/configs/otel/: otel-collector-config.yaml
telemetry/configs/prometheus/: prometheus.yml
telemetry/scripts/: start-telemetry-stack.sh  stop-telemetry-stack.sh  verify-telemetry.sh
(+39 files in other folders)
