[package]
name = "spacetimedb-python-bridge"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Python server module bridge using Pyodide runtime"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
spacetimedb-lib.workspace = true
spacetimedb-bindings-sys.workspace = true
spacetimedb-sats.workspace = true
spacetimedb-primitives.workspace = true

# WASM and JavaScript bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "WorkerGlobalScope",
] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

# Error handling and utilities
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
# For future Pyodide integration during build
