[package]
name = "spacetimedb-telemetry"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "OpenTelemetry integration for SpacetimeDB"

[dependencies]
# OpenTelemetry core dependencies
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = "0.15"
opentelemetry-jaeger = "0.21"
opentelemetry-prometheus = "0.15"
opentelemetry-semantic-conventions = "0.14"

# Additional OpenTelemetry utilities
opentelemetry-appender-tracing = "0.3"

# Prometheus for metrics bridge
prometheus = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Configuration and error handling
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.23"

# HTTP client for OTLP exporter
reqwest = { workspace = true, features = ["json"] }

# gRPC support for OTLP
tonic = "0.11"

# Environment configuration
config = "0.14"

# TOML for configuration parsing in tests
toml = { workspace = true }

# HTTP utilities for propagation
axum = { workspace = true }

# SpacetimeDB dependencies
spacetimedb-lib = { path = "../lib" }

# Utilities
once_cell = "1.19"
